Chapter 3 — Listing 3.8: TemplateMethodPattern.java Demonstrates: Template Method pattern using abstract classes to define a